Fix according to github conversation

--- a/user-console/job-manager/chart/values.yaml
+++ b/user-console/job-manager/chart/values.yaml
@@ -2,14 +2,14 @@ authorization:
   enabled: true
   clientID: "t9k-client"
   pepProxy:
-    image: "tsz.io/t9k/pep-proxy:1.0.10"
+    image: "docker.io/t9kpublic/pep-proxy:1.0.12"
     imagePullPolicy: Always
 
 network:
   gateway: project-gateway
   domain:
-    home: "https://proxy.nc201.kube.tensorstack.net"
-    auth: "https://kc.kube.tensorstack.net"
+    home: "https://home.example.t9kcloud.cn"
+    auth: "https://auth.example.t9kcloud.cn"
 
 server:
   serviceAccount: managed-project-sa
@@ -17,6 +17,7 @@ server:
   image: "docker.io/t9kpublic/job-manager-server:240712"
   
 web:
+  serviceAccount: default
   imagePullPolicy: Always
   image: "docker.io/t9kpublic/job-manager-web:240712"
 
