--- a/user-console/terminal/chart/templates/virtualservice.yaml
+++ b/user-console/terminal/chart/templates/virtualservice.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   labels:
-    app: terminal-{{ .Release.Name }}
-  name: terminal-{{ .Release.Name }}
+    app: {{ .Release.Name }}
+  name: {{ .Release.Name }}
 spec:
   gateways:
   - project-gateway
@@ -21,7 +21,7 @@ spec:
       uri: /
     route:
     - destination:
-        host: terminal-{{ .Release.Name }}
+        host: {{ .Release.Name }}
         port:
           number: 8080
   {{- if not .Values.global.t9k.securityService.enabled }}
