--- a/user-console/terminal/template.yaml
+++ b/user-console/terminal/template.yaml
@@ -23,7 +23,7 @@ template:
         - group: apps
           version: v1
           resource: deployments
-          name: terminal-{{ .Release.Name }}
+          name: "{{ .Release.Name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies:
