Fix some annotations

--- a/user-console/notebook/jupyter-lab-dcu/config.yaml
+++ b/user-console/notebook/jupyter-lab-dcu/config.yaml
@@ -12,6 +12,7 @@ spec:
             privileged: true
             capabilities:
               add: ["SYS_PTRACE"]
+          ## @param spec.template.spec.containers[0].image The image used for the notebook container.
           image: registry.cn-hangzhou.aliyuncs.com/t9k/jupyterlab-torch-2.1.0:240708-dcu
           volumeMounts:
             - name: workingdir
