--- a/user-console/dify/chart/values.yaml
+++ b/user-console/dify/chart/values.yaml
@@ -53,7 +53,7 @@ ingress:
   tlsSecretName: "dify-tls"
 
 ## @param frontend.replicaCount Number of replicas for the deployment of frontend
-## @param frontend.image.repository [default: langgenius/dify-web] Repository name for the Docker image
+## @param frontend.image.repository Repository name for the Docker image
 ## @param frontend.image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param frontend.image.pullPolicy Image pull policy for the Docker image
 ## @param frontend.envs Extra environment variables for the frontend
@@ -128,7 +128,7 @@ frontend:
     failureThreshold: 2
 
 ## @param api.replicaCount Number of replicas for the deployment of api
-## @param api.image.repository [default: langgenius/dify-api] Repository name for the Docker image
+## @param api.image.repository Repository name for the Docker image
 ## @param api.image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param api.image.pullPolicy Image pull policy for the Docker image
 ## @param api.envs Extra environment variables for the api
@@ -212,7 +212,7 @@ api:
     failureThreshold: 10
 
 ## @param api.replicaCount Number of replicas for the deployment of api
-## @param api.image.repository [default: langgenius/dify-api] Repository name for the Docker image
+## @param api.image.repository Repository name for the Docker image
 ## @param api.image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param api.image.pullPolicy Image pull policy for the Docker image
 ## @param api.resources.limits.cpu CPU limit for Kubernetes resources of api
@@ -235,7 +235,7 @@ worker:
 ## @param sandbox.replicaCount Number of replicas for the deployment of sandbox
 ## @param sandbox.apiKey API key for the sandbox
 ## @param sandbox.apiKeySecret API key secret for the sandbox
-## @param sandbox.image.repository [default: langgenius/dify-sandbox] Repository name for the Docker image
+## @param sandbox.image.repository Repository name for the Docker image
 ## @param sandbox.image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param sandbox.image.pullPolicy Image pull policy for the Docker image
 ## @param sandbox.config.python_requirements Python requirements for the sandbox
