--- a/user-console/gpt-researcher/chart/values.yaml
+++ b/user-console/gpt-researcher/chart/values.yaml
@@ -2,8 +2,8 @@
 ##
 replicaCount: 1
 
-## @param image.registry [default: docker.io] Repository registry for the Docker image
-## @param image.repository [default: t9kpublic/gpt-researcher] Repository name for the Docker image
+## @param image.registry Repository registry for the Docker image
+## @param image.repository Repository name for the Docker image
 ## @param image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
