--- a/user-console/notebook/jupyter-lab-cpu/config.yaml
+++ b/user-console/notebook/jupyter-lab-cpu/config.yaml
@@ -8,6 +8,7 @@ spec:
     spec:
       containers:
         - name: notebook
+          ## @param spec.template.spec.containers[0].image The image used for the notebook container.
           image: t9kpublic/torch-2.1.0-notebook:20240716
           volumeMounts:
             - name: workingdir
