--- a/user-console/terminal/configs/v0_1_3.yaml
+++ b/user-console/terminal/configs/v0_1_3.yaml
@@ -1,5 +1,5 @@
-## @param image.registry [default: docker.io] Repository registry for the Docker image
-## @param image.repository [default: yidadaa/chatgpt-next-web] Repository name for the Docker image
+## @param image.registry Repository registry for the Docker image
+## @param image.repository Repository name for the Docker image
 ## @param image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
