--- a/user-console/notebook/jupyter-lab-cpu/template.yaml
+++ b/user-console/notebook/jupyter-lab-cpu/template.yaml
@@ -1,30 +1,28 @@
 apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
-  name: jupyter-lab-cpu
-  displayName: "Jupyter Lab (CPU)"
+  name: jupyterlab-cpu
+  displayName: "JupyterLab (CPU)"
   categories: 
   - IDE
-  description: "Jupyter Lab 是最新的基于 Web 的交互式开发环境，用于代码开发和数据处理。其灵活的界面允许用户配置和安排数据科学、科学计算、计算新闻和机器学习中的工作流程。"
+  description: "JupyterLab 是最新的基于 Web 的交互式开发环境，用于代码开发和数据处理。其灵活的界面允许用户配置和安排数据科学、科学计算、计算新闻和机器学习中的工作流程。"
   icon: "file://$APP_DIR/icon.svg"
 template:
-  crd:
-    group: tensorstack.dev
-    resource: notebooks
+  helm: 
+    repo: "oci://docker.io/t9kpublic"
+    chart: "jupyterlab-cpu"
     versions:
-    - version: v1beta1
-      config: "file://$APP_DIR/config.yaml"
-      readme: "file://$APP_DIR/README.md"
-      note: "file://$APP_DIR/NOTE.txt"
+    - version: 0.1.1
+      config: "file://$APP_DIR/configs/v0_1_1.yaml"
       urls: 
       - name: "jupyter"
-        url: "/t9k/notebooks/projects/{{ .metadata.namespace }}/name/{{ .metadata.name }}/lab"
+        url: "/t9k/notebooks/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/lab"
       readinessProbe:
         resources:
         - group: tensorstack.dev
           version: v1beta1
           resource: notebooks
-          name: "{{ .metadata.name }}"
+          name: "{{ .Release.Name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies:
@@ -32,3 +30,4 @@ template:
         - group: tensorstack.dev
           version: v1beta1
           resource: notebooks
+
