--- a/user-console/terminal/configs/v0_1_2.yaml
+++ b/user-console/terminal/configs/v0_1_2.yaml
@@ -10,6 +10,11 @@ resources:
     memory: 400Mi
 
 ## @param pvcs Mount pvcs to terminal.
+# pvcs:
+# - name: <pvc-1>
+#   mountPath: /mnt/one
+# - name: <pvc-2>
+#   mountPath: /mnt/two
 pvcs: []
 
 global:
