--- a/user-console/vllm/vllm-smls-llama3/chart/values.yaml
+++ b/user-console/vllm/vllm-smls-llama3/chart/values.yaml
@@ -11,7 +11,7 @@ image:
   registry: docker.io
   repository: vllm/vllm-openai
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.3.3"
+  tag: "v0.5.3.post1"
   pullPolicy: IfNotPresent
 
 ## @param resources.limits.cpu CPU limit for Kubernetes resources
@@ -30,6 +30,6 @@ resources:
 ##
 model:
   # 模型以该名称被部署
-  deployName: "llama3-8b"
-  existingClaim: "vllm-llama3"
+  deployName: "llama3-1-8b"
+  existingClaim: "vllm-llama3-1"
   subPath: ""
