--- a/user-console/vllm/vllm-smls-llama3/chart/templates/simplemlservice.yaml
+++ b/user-console/vllm/vllm-smls-llama3/chart/templates/simplemlservice.yaml
@@ -26,9 +26,10 @@ spec:
         args:
           - --model=/var/lib/t9k/model
           - --served-model-name={{ .Values.model.deployName }}
-          - --trust-remote-code
           - --tensor-parallel-size={{ (index .Values.resources.limits "nvidia.com/gpu") }}
-          - --enforce-eager
+          {{ range .Values.app.extraArgs }}
+          - {{ . }}
+          {{ end }}
         ports:
         - containerPort: 8000
         resources:
