--- a/user-console/qdrant/template.yaml
+++ b/user-console/qdrant/template.yaml
@@ -8,7 +8,7 @@ metadata:
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm:
-    repo: "https://qdrant.github.io/qdrant-helm"
+    repo: oci://registry.dockermirror.com/t9kpublic
     chart: "qdrant"
     versions:
     - version: 0.9.1
