--- a/user-console/dify/chart/charts/minio/Chart.yaml
+++ b/user-console/dify/chart/charts/minio/Chart.yaml
@@ -2,11 +2,11 @@ annotations:
   category: Infrastructure
   images: |
     - name: minio
-      image: docker.io/bitnami/minio:2024.4.18-debian-12-r0
+      image: registry.cn-hangzhou.aliyuncs.com/t9k/minio:2024.4.18-debian-12-r0
     - name: minio-client
-      image: docker.io/bitnami/minio-client:2024.3.30-debian-12-r2
+      image: registry.cn-hangzhou.aliyuncs.com/t9k/minio-client:2024.3.30-debian-12-r2
     - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r18
+      image: registry.cn-hangzhou.aliyuncs.com/t9k/os-shell:12-debian-12-r18
   licenses: Apache-2.0
 apiVersion: v2
 appVersion: 2024.4.18
