--- a/user-console/dify/chart/charts/postgresql/Chart.yaml
+++ b/user-console/dify/chart/charts/postgresql/Chart.yaml
@@ -2,11 +2,11 @@ annotations:
   category: Database
   images: |
     - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r20
+      image: registry.cn-hangzhou.aliyuncs.com/t9k/os-shell:12-debian-12-r20
     - name: postgres-exporter
-      image: docker.io/bitnami/postgres-exporter:0.15.0-debian-12-r29
+      image: registry.cn-hangzhou.aliyuncs.com/t9k/postgres-exporter:0.15.0-debian-12-r29
     - name: postgresql
-      image: docker.io/bitnami/postgresql:16.3.0-debian-12-r4
+      image: registry.cn-hangzhou.aliyuncs.com/bitnami/postgresql:16.3.0-debian-12-r4
   licenses: Apache-2.0
 apiVersion: v2
 appVersion: 16.3.0
