--- a/user-console/dify/chart/charts/postgresql/values.yaml
+++ b/user-console/dify/chart/charts/postgresql/values.yaml
@@ -103,7 +103,7 @@ diagnosticMode:
 ## @param image.debug Specify if debug values should be set
 ##
 image:
-  registry: docker.io
+  registry: registry.cn-hangzhou.aliyuncs.com
   repository: bitnami/postgresql
   tag: 16.3.0-debian-12-r4
   digest: ""
@@ -1397,8 +1397,8 @@ volumePermissions:
   ## @param volumePermissions.image.pullSecrets Init container volume-permissions image pull secrets
   ##
   image:
-    registry: docker.io
-    repository: bitnami/os-shell
+    registry: registry.cn-hangzhou.aliyuncs.com
+    repository: t9k/os-shell
     tag: 12-debian-12-r20
     digest: ""
     pullPolicy: IfNotPresent
@@ -1506,8 +1506,8 @@ metrics:
   ## @param metrics.image.pullSecrets Specify image pull secrets
   ##
   image:
-    registry: docker.io
-    repository: bitnami/postgres-exporter
+    registry: registry.cn-hangzhou.aliyuncs.com
+    repository: t9k/postgres-exporter
     tag: 0.15.0-debian-12-r29
     digest: ""
     pullPolicy: IfNotPresent
