--- a/user-console/dify/chart/charts/qdrant/values.yaml
+++ b/user-console/dify/chart/charts/qdrant/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: docker.io/qdrant/qdrant
+  repository: registry.cn-hangzhou.aliyuncs.com/t9k/qdrant
   pullPolicy: IfNotPresent
   tag: ""
   useUnprivilegedImage: false
