--- a/user-console/label-studio/template.yaml
+++ b/user-console/label-studio/template.yaml
@@ -8,7 +8,7 @@ metadata:
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
+    repo: oci://registry.dockermirror.com/t9kpublic
     chart: "label-studio"
     versions:
     - version: 1.4.8
