--- a/user-console/nextchat/chart/values.yaml
+++ b/user-console/nextchat/chart/values.yaml
@@ -2,14 +2,14 @@
 ##
 replicaCount: 1
 
-## @param image.registry Repository registry for the Docker image
-## @param image.repository Repository name for the Docker image
+## @param image.registry [default: docker.io] Repository registry for the Docker image
+## @param image.repository [default: t9k/chatgpt-next-web] Repository name for the Docker image
 ## @param image.tag Image tag for the Docker image (immutable tags are recommended)
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
 image:
-  registry: docker.io
-  repository: yidadaa/chatgpt-next-web
+  registry: registry.cn-hangzhou.aliyuncs.com
+  repository: t9k/chatgpt-next-web
   tag: v2.12.2
   pullPolicy: IfNotPresent
 
