--- a/user-console/open-webui/template.yaml
+++ b/user-console/open-webui/template.yaml
@@ -8,8 +8,8 @@ metadata:
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
+    repo: oci://registry.dockermirror.com/t9kpublic
+    # repo: oci://registry.dockermirror.com/t9kpublic
     chart: "open-webui"
     versions:
     - version: 2.1.5
