--- a/user-console/redis/template.yaml
+++ b/user-console/redis/template.yaml
@@ -8,7 +8,7 @@ metadata:
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm:
-    repo: "https://charts.bitnami.com/bitnami"
+    repo: oci://registry.dockermirror.com/t9kpublic
     chart: "redis"
     versions:
     - version: 19.5.0
