--- a/user-console/search-with-lepton/template.yaml
+++ b/user-console/search-with-lepton/template.yaml
@@ -8,7 +8,7 @@ metadata:
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
+    repo: oci://registry.dockermirror.com/t9kpublic
     chart: "search-with-lepton"
     versions:
     - version: 0.1.4
