--- a/user-console/stable-diffusion-webui-aki/chart/values.yaml
+++ b/user-console/stable-diffusion-webui-aki/chart/values.yaml
@@ -8,8 +8,8 @@ replicaCount: 1
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
 image:
-  registry: docker.io
-  repository: t9kpublic/stable-diffusion-webui
+  registry: registry.cn-hangzhou.aliyuncs.com
+  repository: t9k/stable-diffusion-webui
   tag: "20240514"
   pullPolicy: IfNotPresent
 
