--- a/user-console/tensorboard/config.yaml
+++ b/user-console/tensorboard/config.yaml
@@ -3,7 +3,7 @@ kind: TensorBoard
 metadata:
   name: ""
 spec:
-  image: t9kpublic/tensorflow-2.11.0:cpu-sdk-0.5.2
+  image: registry.cn-hangzhou.aliyuncs.com/t9k/tensorflow-2.11.0:cpu-sdk-0.5.2
   logDir:
     pvc:
       ## @param spec.logDir.pvc[0].name Select a pvc which contains tensorboard data.
