--- a/user-console/vllm/vllm-smls-dcu/template.yaml
+++ b/user-console/vllm/vllm-smls-dcu/template.yaml
@@ -2,17 +2,17 @@ apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
   name: vllm-dcu
-  displayName: "vLLM (Hygon DCU)"
+  displayName: "vLLM (DCU)"
   categories: ["AI"]
   description: "vLLM 是一个用于大语言模型的高吞吐量和内存高效的推理和服务引擎。适用于海光 DCU。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps"
+    # repo: oci://registry.dockermirror.com/t9kpublic
+    repo: oci://registry.dockermirror.com/t9kpublic
     chart: "vllm-dcu"
     versions:
-    - version: 0.1.1
+    - version: 0.1.0
       urls: []
       readinessProbe:
         resources:
@@ -23,3 +23,4 @@ template:
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies: {}
+
