--- a/user-console/vllm/vllm-smls-llama3/template.yaml
+++ b/user-console/vllm/vllm-smls-llama3/template.yaml
@@ -8,8 +8,8 @@ metadata:
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
+    repo: oci://registry.dockermirror.com/t9kpublic
+    # repo: oci://registry.dockermirror.com/t9kpublic
     chart: "vllm-llama3"
     versions:
     - version: 0.1.3
