Tensorboard: change default memory from 200Mi to 4Gi

--- a/user-console/tensorboard/configs/v0_1_2.yaml
+++ b/user-console/tensorboard/configs/v0_1_2.yaml
@@ -26,4 +26,4 @@ logDir: {}
 ## @param resources.memory The maximum number of memory the tensorboard can use.
 resources:
   cpu: 100m
-  memory: 200Mi
+  memory: 4Gi
