--- a/user-console/tensorboard/template.yaml
+++ b/user-console/tensorboard/template.yaml
@@ -3,6 +3,7 @@ kind: Template
 metadata:
   name: tensorboard
   displayName: "TensorBoard"
+  defaultVersion: "0.1.2"
   categories: 
   - Tool
   description: "TensorBoard 是 TensorFlow 的可视化工具，它可以展示你的 TensorFlow 网络模型运行过程中的各种可视化数据。"
@@ -14,6 +15,24 @@ template:
     versions:
     - version: 0.1.1
       config: "file://$APP_DIR/configs/v0_1_1.yaml"
+      urls: 
+      - name: "tensorboard"
+        url: "/t9k/tensorboards/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/"
+      readinessProbe:
+        resources:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: tensorboards
+          name: "{{ .Release.Name }}"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: tensorboards
+    - version: 0.1.2
+      config: "file://$APP_DIR/configs/v0_1_2.yaml"
       urls: 
       - name: "tensorboard"
         url: "/t9k/tensorboards/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/"
