Add app llama-board and fix minor problems

--- a/user-console/tensorboard/template.yaml
+++ b/user-console/tensorboard/template.yaml
@@ -6,7 +6,7 @@ metadata:
   defaultVersion: "0.1.2"
   categories: 
   - Tool
-  description: "TensorBoard 是 TensorFlow 的可视化工具，它可以展示你的 TensorFlow 网络模型运行过程中的各种可视化数据。"
+  description: "TensorBoard 是 TensorFlow 的可视化工具，它可以展示你的 TensorFlow 网络模型（以及其他框架的模型）运行过程中的各种可视化数据。"
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm: 
