--- a/user-console/notebook/jupyter-lab-dcu/chart/templates/notebook.yaml
+++ b/user-console/notebook/jupyter-lab-dcu/chart/templates/notebook.yaml
@@ -44,3 +44,11 @@ spec:
         - name: dev-dri
           hostPath:
             path: /dev/dri
+  ssh:
+  {{- if .Values.ssh.authorizedKeys }}
+    authorized_keys: {{ toYaml .Values.ssh.authorizedKeys | nindent 4}}
+  {{- else }}
+    authorized_keys: []
+  {{- end }}
+    enabled: {{ .Values.ssh.enabled }}
+    serviceType: "{{ .Values.ssh.serviceType }}"
