--- a/user-console/notebook/rstudio/template.yaml
+++ b/user-console/notebook/rstudio/template.yaml
@@ -3,6 +3,7 @@ kind: Template
 metadata:
   name: rstudio
   displayName: RStudio
+  defaultVersion: "0.1.2"
   categories: 
   - IDE
   description: "RStudio 集成开发环境（IDE），旨在帮助你提高 R 和 Python 的工作效率。"
@@ -14,6 +15,24 @@ template:
     versions:
     - version: 0.1.1
       config: "file://$APP_DIR/configs/v0_1_1.yaml"
+      urls: 
+      - name: "rstudio"
+        url: "/t9k/notebooks/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/"
+      readinessProbe:
+        resources:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: notebooks
+          name: "{{ .Release.Name }}"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: notebooks
+    - version: 0.1.2
+      config: "file://$APP_DIR/configs/v0_1_2.yaml"
       urls: 
       - name: "rstudio"
         url: "/t9k/notebooks/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/"
